<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarMaintances</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_btpopup">请选择蓝牙模块</string>
    <string name="title_btdeny">不选择蓝牙模块</string>
    <string name="err_nobluetooth">手机无蓝牙功能</string>
    <string name="err_nobtadapter">没搜索到可用的蓝牙模块</string>
    <string name="err_btdisconnect">蓝牙连接断开</string>
    <string name="err_btservicestop">蓝牙服务未启动</string>
    <string name="main_index_1">我的车</string>
    <string name="main_index_2">保养品</string>
    <string name="main_index_3">修车店</string>
    <string name="main_index_4">诊断</string>
    <string name="main_index_5">更多</string>
	<string-array name="connect_status">
        <item>连接断开</item>
        <item>正在连接</item>
        <item>连接成功</item>
    </string-array>
    
</resources>
